# pi-verify-all

./: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.verify.json  vitest.config.ts
.github/workflows/: ci.yml
.pi/: verify.json
examples/python-flask/: .gitignore  README.md  pyproject.toml
examples/python-flask/.pi/: verify.json
examples/python-flask/app/: main.py
examples/python-flask/hurl/: api.hurl
examples/python-flask/tests/: test_app.py
src/: commands.ts  config.ts  index.ts  pipeline.ts  state.ts  terminal.ts  types.ts  widget.ts
src/__tests__/: extension.test.ts  pipeline.test.ts
src/__tests__/mocks/: pi-agent.ts
src/__tests__/types/: pi-patched.d.ts
